--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+AppStore/
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,macos,windows,linux,swift,swiftpm,fastlane
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,macos,windows,linux,swift,swiftpm,fastlane
 
