Add model for filament materials and add view model for EditMaterialView

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -198,6 +198,11 @@ type_contents_order:
     - other_method
     - subscript
 
+attributes:
+  always_on_line_above:
+    - "@ObservationIgnored"
+    - "@ObservationTracked"
+
 
 ###########################
 ###    Custom Rules     ###
